7 som fungerar.